View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027068 | Open CASCADE | OCCT:Coding | public | 2016-01-09 09:32 | 2016-04-20 15:50 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027068: Coding - eliminate VC++ 14 compiler warnings in MFC samples | ||||
Description | VC++ 14 reports a dozen compiler warnings on MFC samples. of two kinds: - local variable hides variable in outer scope - narrowing type conversion | ||||
Steps To Reproduce | Build MFC samples with VC++ 14 | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR27068 has been created by abv. SHA-1: aa72cedaa7bfd4c3546b64b7b77df69d35f479f4 Detailed log of new commits: Author: abv Date: Sat Jan 9 09:33:40 2016 +0300 0027068: Coding - eliminate VC++ 14 compiler warnings in MFC samples Code is corrected to avoid compiler warnings |
|
Fix pushed to CR27068, please review |
|
Please check MFC samples, OCCT code is not affected by patch. |
|
Branch CR27068 has been deleted by kgv. SHA-1: aa72cedaa7bfd4c3546b64b7b77df69d35f479f4 |
occt: master e0280ce9 2016-01-09 06:33:40
Committer: abv Details Diff |
0027068: Coding - eliminate VC++ 14 compiler warnings in MFC samples Code is corrected to avoid compiler warnings |
Affected Issues 0027068 |
|
mod - samples/mfc/standard/01_Geometry/src/GeomSources.cpp | Diff File | ||
mod - samples/mfc/standard/02_Modeling/src/ModelingDoc.cpp | Diff File | ||
mod - samples/mfc/standard/04_Viewer3d/src/TexturesExt_Presentation.cpp | Diff File | ||
mod - samples/mfc/standard/07_Triangulation/src/Tesselate_Presentation.cpp | Diff File | ||
mod - samples/mfc/standard/Common/DimensionDlg.cpp | Diff File | ||
mod - samples/mfc/standard/Common/ImportExport/ImportExport.cpp | Diff File | ||
mod - samples/mfc/standard/Common/ISession2D/ISession2D_Shape.cpp | Diff File | ||
mod - samples/mfc/standard/Common/Winmain.cpp | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-01-09 09:32 |
|
New Issue | |
2016-01-09 09:32 |
|
Assigned To | => kgv |
2016-01-09 14:02 | git | Note Added: 0049752 | |
2016-01-09 14:03 |
|
Note Added: 0049753 | |
2016-01-09 14:03 |
|
Status | new => resolved |
2016-01-09 14:03 |
|
Steps to Reproduce Updated | |
2016-01-09 20:52 | kgv | Note Added: 0049763 | |
2016-01-09 20:52 | kgv | Assigned To | kgv => bugmaster |
2016-01-09 20:52 | kgv | Status | resolved => reviewed |
2016-01-15 16:57 |
|
Changeset attached | => occt master e0280ce9 |
2016-01-15 16:57 |
|
Assigned To | bugmaster => abv |
2016-01-15 16:57 |
|
Status | reviewed => verified |
2016-01-15 16:57 |
|
Resolution | open => fixed |
2016-04-17 13:46 | git | Note Added: 0052973 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |