0027068: Coding - eliminate VC++ 14 compiler warnings in MFC samples

Code is corrected to avoid compiler warnings